--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>XXX</title>
+    <title>Repensar as formas de comunicação e (re/a)presentação da produção académica em DC</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
