--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Repensar as formas de comunicação e (re/a)presentação da produção académica em DC</title>
+    <title>Repensar as formas de Comunicação e (re/a)presentação da produção académica em DC</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,6 +22,7 @@
 <p id="title-2" class="CGaramond-L"><span class="NHaas-R">as formas de </span>Comunicação</p>
 <p id="title-3" class="CGaramond-L"><span class="NHaas-R">e </span>(re/a)presentação</p>
 <p id="title-4" class="CGaramond-L"><span class="NHaas-R">da produção académica em</span> DC</p>
+<div id="container-2"></div>
 </div>
 
 <!-- Sumário-->
