--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <p id="title-5" class="NHaas-R-30">Desenvolver um <span class="CGaramond-L-35">modelo de apresentação</span> e articulação da <span class="CGaramond-L-35">produção académica</span>, do terceiro ano de <span class="CGaramond-L-35">licenciatura</span> e primeiro de <span class="CGaramond-L-35">mestrado</span>.</p>  
 </div>
 <div id="container-6">
-    <p id="title-6" class="NHaas-R-30">Explorar os limites da sua representação, tradicionalmente associada a práticas de compilação: <span class="CGaramond-L-35">mostras de finalistas, Website, Catálogo, Exposição</span></p>  
+    <p id="title-6" class="NHaas-R-30">Explorar os limites da sua representação, tradicionalmente associada a práticas de compilação: <span class="CGaramond-L-35">mostras de finalistas, Website, Catálogo, Exposição.</span></p>  
 </div>
 <div id="container-5">
     <p id="title-5" class="NHaas-R-30">Explorar a comunicação do <span class="CGaramond-L-35">discurso</span> que essa produção constrói através dos <span class="CGaramond-L-35">suportes, formas e meios</span> que o veiculam.</p>  
